@@ -26,7 +26,7 @@ priority_not_playing = background
 pattern1 = {state} {song format="%(artist)s - %(title)s"} {elapsed}
 
 pattern2 = {song format="%(artist)s",speed=4} {elapsed}
-    {song format="%(title)s",speed=2} {state}
+    {song format="%(title)s",speed=2,mode=b} {state}
 
 pattern3 = {song format="%(artist)s",speed=4}
     {song format="%(album)s - %(title)s",speed=2}
